# lockscreen

./: .gitignore  Cargo.toml  README.md  install.sh  lockscreen.1
benches/: blur.rs
src/: display.rs  effect.rs  lib.rs  lock.rs  main.rs
tests/: display_tests.rs  lock_tests.rs
