[package]
name = "lockscreen"
version = "0.1.1"
edition = "2024"

[profile.release]
opt-level="s"
lto="fat"
codegen-units=1
strip=true
panic="abort"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
xcap = {  version = "0.9.4", features = ["image"] }
fastblur = "0.1.1"
image = "0.25.10"
