[package]
name = "lockscreen"
version = "0.1.1"
edition = "2024"

[profile.release]
opt-level=3
lto="fat"
codegen-units=1
strip=true
panic="abort"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
xcap = {  version = "0.9.4", features = ["image"] }

[dev-dependencies]
divan = "0.1"
fastblur = "0.1.1"
libblur = "0.24.0"

[[bench]]
name = "blur"
harness = false
